test for router posting

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,3 @@
-<!-- views/index.ejs -->
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -12,6 +10,17 @@
     </header>
 
     <main>
+      <div class="row">
+        <div class="col-lg-6">
+          <div class="input-group">
+            <input type="text" class="form-control" placeholder="Name of the food...">
+            <input type="text" class="form-control" placeholder="Calories...">
+            <input type="text" class="form-control" placeholder="Date...">
+            <span class="input-group-btn">
+                   <button class="btn btn-default" type="button">Add meal</button>
+            </span>
+          </div>
+        </div>
         <div class="container">
             <h1>Calorie Counter</h1>
         </div>
