get meals, table protoype, tests

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,25 +10,43 @@
     </header>
 
     <main>
+      <div class="page-header">
+        <h1 class="text-center">Calorie Counter <small>cheeseburger</small></h1>
+      </div>
       <div class="row">
-        <div class="col-lg-6">
+        <div class="col-lg-8 col-lg-offset-2">
           <div class="input-group">
-            <input type="text" class="form-control" placeholder="Name of the food...">
-            <input type="text" class="form-control" placeholder="Calories...">
-            <input type="text" class="form-control" placeholder="Date...">
+            <input type="text" class="form-control name" placeholder="Name of the food...">
+            <input type="text" class="form-control calories" placeholder="Calories...">
+            <input type="text" class="form-control date" placeholder="Date...">
             <span class="input-group-btn">
-                   <button class="btn btn-default" type="button">Add meal</button>
+                   <button class="btn btn-default" type="button"> <span class="glyphicon glyphicon-plus-sign"></span> Add meal</button>
             </span>
           </div>
-        </div>
-        <div class="container">
-            <h1>Calorie Counter</h1>
-        </div>
+          <br>
+            <div class="panel-heading">Panel heading</div>
+
+            <table class="table table-hover">
+              <tr>
+                <td>John</td>
+                <td>Doe</td>
+              </tr>
+              <tr>
+                <td>Jane</td>
+                <td>Doe</td>
+              </tr>
+            </table>
+          </div>
+    </div>
+
     </main>
 
     <footer>
         <% include ./partials/footer %>
     </footer>
-
+    <script src="../public/selectors.js"></script>
+    <script src="../public/makeRequest.js"></script>
+    <script src="../public/domFunctions.js"></script>
+    <script src="../public/script.js"></script>
 </body>
 </html>
