--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,7 +5,7 @@
 
         <div class="navbar-header">
             <a class="navbar-brand" href="#">
-                <span class="glyphicon glyphicon glyphicon-tree-deciduous"></span>
+                <span class="glyphicon glyphicon-cutlery"></span>
                 Eating is fun!
             </a>
         </div>
@@ -16,4 +16,7 @@
         </ul>
 
     </div>
+
 </nav>
+<div class="alert alert-success hidden" role="alert">Meal successfuly added!</div>
+<div class="alert alert-danger hidden" role="alert">Invalid input</div>
