separated queries and controller, get meals

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,28 +15,10 @@
       </div>
       <div class="row">
         <div class="col-lg-8 col-lg-offset-2">
-          <div class="input-group">
-            <input type="text" class="form-control name" placeholder="Name of the food...">
-            <input type="text" class="form-control calories" placeholder="Calories...">
-            <input type="text" class="form-control date" placeholder="Date...">
-            <span class="input-group-btn">
-                   <button class="btn btn-default" type="button"> <span class="glyphicon glyphicon-plus-sign"></span> Add meal</button>
-            </span>
-          </div>
+          <% include ./partials/input %>
           <br>
-            <div class="panel-heading">Panel heading</div>
-
-            <table class="table table-hover">
-              <tr>
-                <td>John</td>
-                <td>Doe</td>
-              </tr>
-              <tr>
-                <td>Jane</td>
-                <td>Doe</td>
-              </tr>
-            </table>
-          </div>
+          <% include ./partials/table %>
+        </div>
     </div>
 
     </main>
