--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -3,6 +3,10 @@
 <meta charset="UTF-8">
 <title>Calorie Counter</title>
 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+<link rel="stylesheet" href="../../public/assets/style.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 <style>
-    body    { padding-top:50px; }
+    body    { padding-top:50px; background: #FFFFE0 }
+    .jumbotron { background: #FA8072 }
 </style>
