--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,22 +1,9 @@
 <!-- views/partials/header.ejs -->
 
-<nav class="navbar navbar-default" role="navigation">
-    <div class="container-fluid">
-
-        <div class="navbar-header">
-            <a class="navbar-brand" href="#">
-                <span class="glyphicon glyphicon-cutlery"></span>
-                Eating is fun!
-            </a>
-        </div>
-
-        <ul class="nav navbar-nav">
-            <li><a href="/">Home</a></li>
-            <li><a href="/about">About</a></li>
-        </ul>
-
-    </div>
-
-</nav>
+<div class="jumbotron">
+  <h1>Calorie Counter project</h1>
+  <p>Add meal, filter eaten meals by day, calculates total calories for you.</p>
+</div>
 <div class="alert alert-success hidden" role="alert">Meal successfuly added!</div>
 <div class="alert alert-danger hidden" role="alert">Invalid input</div>
+<div class="alert alert-info hidden" role="alert">Meal deleted!</div>
