--- a/views/partials/table.ejs
+++ b/views/partials/table.ejs
@@ -1,6 +1,5 @@
 <!-- views/partials/table.ejs -->
 
-<div class="panel-heading">Meals</div>
   <table class="table table-hover table-condensed">
     <thead>
       <tr>
@@ -9,4 +8,24 @@
           <th>Date</th>
       </tr>
   </thead>
+  <tbody></tbody>
+  <div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+          <h4 class="modal-title" id="myModalLabel">Confirm delete</h4>
+    </div>
+    <div class="modal-body">
+      Are you sure to delete this meal?
+    </div>
+    <div class="modal-footer">
+      <button type="button" class="btn btn-secondary no" data-dismiss="modal">No</button>
+      <button type="button" class="btn btn-primary yes" data-dismiss="modal">Yes</button>
+    </div>
+  </div>
+</div>
+</div>
 </table>
