--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,7 +1,7 @@
 <!-- views/partials/header.ejs -->
 
 <div class="jumbotron">
-  <h1>Calorie Counter project</h1>
+  <h1>Calorie Counter</h1>
   <p>Add meal, filter eaten meals by day, calculates total calories for you.</p>
 </div>
 <div class="alert alert-success hidden" role="alert">Meal successfuly added!</div>
