--- a/views/partials/input.ejs
+++ b/views/partials/input.ejs
@@ -1,8 +1,8 @@
 <!-- views/partials/input.ejs -->
-
 <div class="input-group">
   <input type="text" class="form-control name" placeholder="Name of the food...">
   <input type="text" class="form-control calories" placeholder="Calories...">
+  <input type="text" class="form-control date" placeholder="Enter date...MM-DD">
   <span class="input-group-btn">
          <button class="btn btn-default" type="button"> <span class="glyphicon glyphicon-plus-sign"></span> Add meal</button>
   </span>
