--- a/views/partials/totalCalories.ejs
+++ b/views/partials/totalCalories.ejs
@@ -1,5 +1,6 @@
 <!-- views/partials/totalCalories.ejs -->
-
+<!-- <div class="col-xs-4 col-xs-offset-4"> -->
 <h4>Total calories on the list:
   <span id="total" class="label label-primary"></span>
 </h4>
+<!-- </div> -->
