--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,7 @@
 <head>
     <% include ./partials/head %>
 </head>
-<body class="container">
+<body class="container container-table">
 
     <header>
         <% include ./partials/header %>
@@ -17,15 +17,16 @@
     <br>
     <br>
     <% include ./partials/table %>
+    <br>
     <% include ./partials/totalCalories %>
     </main>
 
     <footer>
         <% include ./partials/footer %>
     </footer>
-    <script src="../public/selectors.js"></script>
-    <script src="../public/makeRequest.js"></script>
-    <script src="../public/domFunctions.js"></script>
-    <script src="../public/script.js"></script>
+    <script src="../public/scripts/selectors.js"></script>
+    <script src="../public/scripts/makeRequest.js"></script>
+    <script src="../public/scripts/domFunctions.js"></script>
+    <script src="../public/scripts/script.js"></script>
 </body>
 </html>
