--- a/views/partials/table.ejs
+++ b/views/partials/table.ejs
@@ -1,5 +1,4 @@
 <!-- views/partials/table.ejs -->
-
   <table class="table table-hover table-condensed">
     <thead>
       <tr>
@@ -9,6 +8,7 @@
       </tr>
   </thead>
   <tbody></tbody>
+
   <div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
@@ -23,9 +23,9 @@
     </div>
     <div class="modal-footer">
       <button type="button" class="btn btn-secondary no" data-dismiss="modal">No</button>
-      <button type="button" class="btn btn-primary yes" data-dismiss="modal">Yes</button>
+      <button type="button" class="btn btn-primary yes" data-dismiss="modal" data="hy">Yes</button>
     </div>
   </div>
 </div>
 </div>
-</table>
+  </table>
